--- a/TelecomWebsite-war/web/css/global.css
+++ b/TelecomWebsite-war/web/css/global.css
@@ -12,6 +12,14 @@ and open the template in the editor.
 	box-sizing: border-box;
 }
 
+form input, textarea{
+  margin-bottom: 10px;
+}
+
+.row{
+    display: flex;
+}
+
 .row::after {
 	content: "";
 	clear: both;
@@ -123,7 +131,7 @@ footer {
 
 
 #middle_section, nav, #feed{
-    height: 80vh;
+    min-height: 80vh;
 }
 
 @media screen and (max-width: 840px) {
@@ -143,9 +151,13 @@ footer {
 		text-align: center;
 	}
         #middle_section, nav, footer{
-            height: unset;
-            max-height: unset;
+            min-height: unset;
+            
         }
+/*        .row{
+            display: unset;
+        }*/
+    
 }
 
 @media screen and (max-width: 480px) {
@@ -155,6 +167,9 @@ footer {
         #middle_section, nav, footer{
             height: unset;
             max-height: unset;
+        }
+        .row{
+            display: unset;
         }
 }
 
