--- a/TelecomWebsite-war/web/css/global.css
+++ b/TelecomWebsite-war/web/css/global.css
@@ -12,10 +12,6 @@ and open the template in the editor.
     box-sizing: border-box;
 }
 
-form input, textarea{
-    margin-bottom: 10px;
-}
-
 .row{
     display: flex;
 }
@@ -179,5 +175,25 @@ footer {
     }
 }
 
+#logo{
+    float: right;
+    display: block;
+    height: 100%;
+}
 
+form input, textarea{
+    margin-bottom: 10px;
+    border: groove;
+    border-radius: 30px 10px;
+}
+
+input[type=submit]{
+    border-radius: 30px;
+    z-index: 1;
+    border: ridge;
+    background: black;
+    color: white;
+    border-color: gray;
+    border-width: 5px;
+}
 
