Improve dashboard design

--- a/TelecomWebsite-war/web/css/global.css
+++ b/TelecomWebsite-war/web/css/global.css
@@ -37,8 +37,15 @@ header {
     padding: 20px;
     padding-left: 80px;
     text-align: left;
-    height: 25vh;
-    max-height: 105px;
+    font-size: 20px;
+    font-family: inherit;
+    height: 30vh;
+    max-height: 140px;
+}
+
+header a {
+    color: #ffffff;
+    text-decoration: none;
 }
 
 .menu {
@@ -191,5 +198,76 @@ input[type=submit]{
     color: white;
     border-color: gray;
     border-width: 5px;
+}
+
+.advertise {
+    border: 5px solid #ff99cc;
+    border-radius: 15px;
+    padding: 0px;
+}
+
+.slideshow-container {
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+}
+
+.dot {
+    height: 13px;
+    width: 13px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+.active {
+    background-color: #717171;
+}
+
+.mySlides {display:none}
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+}
+
+@keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+}
+
+#loggedin_username {
+    font-size: 30px;
+    color: #01579B;
+}
+
+#pack_details_table tr td{
+    padding: 15px;
+    border-bottom: 1px solid #ddd;
+}
+
+#pack_details_table tr th {
+    padding: 15px;
+    border-bottom: 1px solid #ddd;
+    background: #7986cb;
+    color: white;
+}
+
+#pack_details_table {
+    background: white;
+    border-collapse: collapse;
+    width: 90%;
+    text-align: left;
+}
+
+#pack_details_div{
+    overflow: auto;
 }
 
